--- a/index.html
+++ b/index.html
@@ -5,11 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </head>
 <body>
-    <h1>Rock Paper Scissors</h1>
-    <h2 class="desc">Play it in your console, peasant</h2>
+    <div class="main-container">
+        <header>
+            <h1>Rock Paper Scissors</h1>
+            <h2 class="desc">Play it in your console, peasant</h2>
+            <div class="scores_div">
+                <p  class = "scores">Player Score: <br><span id="player-score">0</span></p>
+                <p  class = "scores">Computer Score:<br><span id="computer-score">0</p>
+            </div>
+            <div class="buttons">
+            <button class="select" id="rock">ROCK</button>
+            <button class="select" id="paper">PAPER</button>
+            <button class="select" id="scissors">SCISSORS</button>
+        </div>
+        </header>
+    </div>
 </body>
 </html>
