Add rest of the logic and functionality

--- a/index.html
+++ b/index.html
@@ -16,16 +16,20 @@
         <header>
             <h1>Rock Paper Scissors</h1>
             <h2 class="desc">Play it in your console, peasant</h2>
+        </header>
             <div class="scores_div">
-                <p  class = "scores">Player Score: <br><span id="player-score">0</span></p>
+                <p  class = "scores" >Player Score: <br><span id="player-score">0</span></p>
                 <p  class = "scores">Computer Score:<br><span id="computer-score">0</p>
             </div>
+            <p id="score-para"></p>
             <div class="buttons">
             <button class="select" id="rock">ROCK</button>
             <button class="select" id="paper">PAPER</button>
             <button class="select" id="scissors">SCISSORS</button>
         </div>
-        </header>
+        <div class="bottom-half">
+        <button class="select" id="reset">RESET</button>
+    </div>
     </div>
 </body>
 </html>
