Modifications on CSS

--- a/index.html
+++ b/index.html
@@ -15,14 +15,17 @@
     <div class="main-container">
         <header>
             <h1>Rock Paper Scissors</h1>
-            <h2 class="desc">Play it in your console, peasant</h2>
+            <h2 class="desc">Play 5 rounds of Rock Paper Scissors </h2>
         </header>
             <div class="scores_div">
                 <p  class = "scores" >Player Score: <br><span id="player-score">0</span></p>
                 <p  class = "scores">Computer Score:<br><span id="computer-score">0</p>
+                
             </div>
             <p id="score-para"></p>
+            <h3>Select your Weapon:</h3>
             <div class="buttons">
+            
             <button class="select" id="rock">ROCK</button>
             <button class="select" id="paper">PAPER</button>
             <button class="select" id="scissors">SCISSORS</button>
